--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+     "react-calendar-heatmap": "^1.9.0",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
